--- a/index.html
+++ b/index.html
@@ -27,87 +27,87 @@
                 <a href="info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                <a href="+38 096 111 11 11">+38 096 111 11 11</a>
+                <a href="+380961111111">+380961111111</a>
                 </li>
             </ul>
          </nav>
     </header>
-    <div>
-        <!-- Baner-empty-space-yet  -->
+    <main>
+        <div>
+            <!-- Baner-empty-space-yet  -->
+            <section>
+                <h1>
+                    Эффективные решения для вашего бизнеса
+                </h1>
+                <a href="">Заказать услугу</a>
+            </section>
+        </div>
+            <!-- section-two-text -->
         <section>
-            <h1>
-                Эффективные решения для вашего бизнеса
-            </h1>
-            <a href="">Заказать услугу</a>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
         </section>
-    </div>
-         <!-- section-two-text -->
-    <section>
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
+            <!-- section-three-photos -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/box1.jpg" alt="hands-on-keyboard" width="370" height="294"></li>
+                <li><img src="./images/box2.jpg" alt="hands-holding-smartphone" width="370" height="294"></li>
+                <li><img src="./images/box3.jpg" alt="hands-holding-PDA" width="370" height="294"></li>
+            </ul>
+        </section>
+            <!-- section-ower-team -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/card1.jpg" alt="a-brown-hair-man-with-glasses-in-red-shirt-" width="270" height="260">
+                    <h4>Игорь Демьяненко</h4>
+                    <p>Product Designer</p>
+                </li>
 
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
+                <li>
+                    <img src="./images/card2.jpg" alt="a-blonde-long-hair-woman-in-black-jacket" width="270" height="260">
+                    <h4>Ольга Репина</h4>
+                    <p>Frontend Developer</p>
+                </li>
 
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
+                <li>
+                    <img src="./images/card3.jpg" alt="a-brown-hair-man-in-silver-shirt" width="270" height="260">
+                    <h4>Николай Тарасов</h4>
+                    <p>Marketing</p>
+                </li>
 
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-        </ul>
-    </section>
-         <!-- section-three-photos -->
-    <section>
-        <h2>
-            Чем мы занимаемся
-        </h2>
-        <ul>
-            <li><img src="./images/box1.jpg" alt="hands-on-keyboard" width="370" height="294"></li>
-            <li><img src="./images/box2.jpg" alt="hands-holding-smartphone" width="370" height="294"></li>
-            <li><img src="./images/box3.jpg" alt="hands-holding-PDA" width="370" height="294"></li>
-        </ul>
-    </section>
-        <!-- section-ower-team -->
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./images/card1.jpg" alt="a-brown-hair-man-with-glasses-in-red-shirt-" width="270" height="260">
-                <h4>Игорь Демьяненко</h4>
-                <p>Product Designer</p>
-            </li>
-
-            <li>
-                <img src="./images/card2.jpg" alt="a-blonde-long-hair-woman-in-black-jacket" width="270" height="260">
-                <h4>Ольга Репина</h4>
-                <p>Frontend Developer</p>
-            </li>
-
-            <li>
-                <img src="./images/card3.jpg" alt="a-brown-hair-man-in-silver-shirt" width="270" height="260">
-                <h4>Николай Тарасов</h4>
-                <p>Marketing</p>
-            </li>
-
-            <li>
-                <img src="./images/card4.jpg" alt="a-black-hair-man-with-glasses-in-black-t-shirt" width="270" height="260">
-                <h4>Михаил Ермаков</h4>
-                <p>UI Designer</p>
-            </li>
-        </ul>
-    </section>
+                <li>
+                    <img src="./images/card4.jpg" alt="a-black-hair-man-with-glasses-in-black-t-shirt" width="270" height="260">
+                    <h4>Михаил Ермаков</h4>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
         <!-- footer -->
     <footer>
-        
+
     </footer>
 </body>
 </html>
