--- a/index.html
+++ b/index.html
@@ -107,7 +107,17 @@
     </main>
         <!-- footer -->
     <footer>
+        <a href="WebStudio">WebStudio</a>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <ul>
+            <li>
+               <a href="info@example.com">info@example.com</a>
+            </li>
 
+            <li>
+                <a href="+380961111111">+380961111111</a>
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
