--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="">Контакты</a>
                 </li>
             </ul>
-
+        </nav>    
             <ul>
                 <li>
                 <a href="info@devstudio.com">info@devstudio.com</a>
@@ -30,7 +30,7 @@
                 <a href="+380961111111">+380961111111</a>
                 </li>
             </ul>
-         </nav>
+         
     </header>
     <main>
         <div>
@@ -39,7 +39,7 @@
                 <h1>
                     Эффективные решения для вашего бизнеса
                 </h1>
-                <a href="">Заказать услугу</a>
+                <button>Заказать услугу</button>
             </section>
         </div>
             <!-- section-two-text -->
