description images in ru
alt images description in ru

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box1.jpg" alt="hands-on-keyboard" width="370" height="294"></li>
-                <li><img src="./images/box2.jpg" alt="hands-holding-smartphone" width="370" height="294"></li>
-                <li><img src="./images/box3.jpg" alt="hands-holding-PDA" width="370" height="294"></li>
+                <li><img src="./images/box1.jpg" alt="руки-печатают-по-клавиатуре" width="370" height="294"></li>
+                <li><img src="./images/box2.jpg" alt="руки-держат-смартфон" width="370" height="294"></li>
+                <li><img src="./images/box3.jpg" alt="руки-держат-планшет" width="370" height="294"></li>
             </ul>
         </section>
             <!-- section-ower-team -->
@@ -80,25 +80,25 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/card1.jpg" alt="a-brown-hair-man-with-glasses-in-red-shirt-" width="270" height="260">
+                    <img src="./images/card1.jpg" alt="мужчина-в-красной-рубашке-в-очках" width="270" height="260">
                     <h4>Игорь Демьяненко</h4>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <img src="./images/card2.jpg" alt="a-blonde-long-hair-woman-in-black-jacket" width="270" height="260">
+                    <img src="./images/card2.jpg" alt="женщина-блондинка-в-черном-пинджаке-" width="270" height="260">
                     <h4>Ольга Репина</h4>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img src="./images/card3.jpg" alt="a-brown-hair-man-in-silver-shirt" width="270" height="260">
+                    <img src="./images/card3.jpg" alt="мужчина-в-серой-рубашке" width="270" height="260">
                     <h4>Николай Тарасов</h4>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="./images/card4.jpg" alt="a-black-hair-man-with-glasses-in-black-t-shirt" width="270" height="260">
+                    <img src="./images/card4.jpg" alt="мужчина-в-ченой-футболке-в-очках" width="270" height="260">
                     <h4>Михаил Ермаков</h4>
                     <p>UI Designer</p>
                 </li>
