--- a/index.html
+++ b/index.html
@@ -11,30 +11,20 @@
         <nav>
             <a href="WebStudio">WebStudio</a>
             <ul>
-                <li>
-                <a href="">Студия</a>
-                </li>
-                <li>
-                <a href="">Портфолио</a>
-                </li>
-                <li>
-                <a href="">Контакты</a>
-                </li>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>    
             <ul>
-                <li>
-                <a href="info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                <a href="+380961111111">+380961111111</a>
-                </li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+380961111111</a></li>
             </ul>
          
     </header>
     <main>
         <div>
-            <!-- Baner-empty-space-yet  -->
+            <!-- section-one-baner-empty-space-yet  -->
             <section>
                 <h1>
                     Эффективные решения для вашего бизнеса
@@ -81,26 +71,26 @@
             <ul>
                 <li>
                     <img src="./images/card1.jpg" alt="мужчина-в-красной-рубашке-в-очках" width="270" height="260">
-                    <h4>Игорь Демьяненко</h4>
-                    <p>Product Designer</p>
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
                 </li>
 
                 <li>
                     <img src="./images/card2.jpg" alt="женщина-блондинка-в-черном-пинджаке-" width="270" height="260">
-                    <h4>Ольга Репина</h4>
-                    <p>Frontend Developer</p>
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
                 </li>
 
                 <li>
                     <img src="./images/card3.jpg" alt="мужчина-в-серой-рубашке" width="270" height="260">
-                    <h4>Николай Тарасов</h4>
-                    <p>Marketing</p>
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
                 </li>
 
                 <li>
                     <img src="./images/card4.jpg" alt="мужчина-в-ченой-футболке-в-очках" width="270" height="260">
-                    <h4>Михаил Ермаков</h4>
-                    <p>UI Designer</p>
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -111,11 +101,11 @@
         <address>г. Киев, пр-т Леси Украинки, 26</address>
         <ul>
             <li>
-               <a href="info@example.com">info@example.com</a>
+               <a href="mailto:info@example.com">info@example.com</a>
             </li>
 
             <li>
-                <a href="+380961111111">+380961111111</a>
+                <a href="tel:+380961111111">+380961111111</a>
             </li>
         </ul>
     </footer>
