--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
             <!-- section-two-text -->
         <section>
+            <h2>Мы предлагаем</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
