--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="WebStudio">WebStudio</a>
+            <a lang="en" href="WebStudio">WebStudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
@@ -99,7 +99,7 @@
     </main>
         <!-- footer -->
     <footer>
-        <a href="WebStudio">WebStudio</a>
+        <a lang="en" href="WebStudio">WebStudio</a>
         <address>г. Киев, пр-т Леси Украинки, 26</address>
         <ul>
             <li>
